<?xml version="1.0" encoding="US-ASCII"?>
<!--
 ! Copyright (c) 2023-2024 Red Hat, Inc.
 !
 ! Licensed under the Apache License, Version 2.0 (the "License");
 ! you may not use this file except in compliance with the License.
 ! You may obtain a copy of the License at
 !
 !     http://www.apache.org/licenses/LICENSE-2.0
 !
 ! Unless required by applicable law or agreed to in writing, software
 ! distributed under the License is distributed on an "AS IS" BASIS,
 ! WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ! See the License for the specific language governing permissions and
 ! limitations under the License.
 `-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.fedoraproject.xmvn</groupId>
  <artifactId>xmvn-generator</artifactId>
  <version>2.0.0</version>
  <name>XMvn Generator</name>
  <description>XMvn Generator is a dependency generator RPM Package Manager.</description>
  <url>https://github.com/fedora-java/xmvn-generator</url>
  <inceptionYear>2023</inceptionYear>
  <organization>
    <name>Red Hat, Inc.</name>
    <url>http://www.redhat.com/</url>
  </organization>
  <licenses>
    <license>
      <name>Apache License Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>mizdebsk</id>
      <name>Mikolaj Izdebski</name>
      <email>mizdebsk@redhat.com</email>
      <organization>Red Hat, Inc.</organization>
      <organizationUrl>http://www.redhat.com/</organizationUrl>
      <timezone>+1</timezone>
    </developer>
  </developers>
  <mailingLists>
    <mailingList>
      <name>Fedora Java development List</name>
      <subscribe>https://admin.fedoraproject.org/mailman/listinfo/java-devel</subscribe>
      <unsubscribe>https://admin.fedoraproject.org/mailman/listinfo/java-devel</unsubscribe>
      <post>java-devel@lists.fedoraproject.org</post>
      <archive>http://lists.fedoraproject.org/pipermail/java-devel/</archive>
    </mailingList>
  </mailingLists>
  <scm>
    <connection>scm:git:https://github.com/fedora-java/xmvn-generator.git</connection>
    <developerConnection>scm:git:git@github.com:fedora-java/xmvn-generator.git</developerConnection>
    <url>https://github.com/fedora-java/xmvn-generator</url>
  </scm>
  <issueManagement>
    <system>Github</system>
    <url>https://github.com/fedora-java/xmvn-generator/issues/</url>
  </issueManagement>
  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
      <version>9.7</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-compress</artifactId>
      <version>1.22</version>
    </dependency>
    <dependency>
      <groupId>org.fedoraproject.xmvn</groupId>
      <artifactId>xmvn-api</artifactId>
      <version>4.3.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-model</artifactId>
      <version>3.9.9</version>
    </dependency>
    <dependency>
      <groupId>org.fedoraproject.xmvn</groupId>
      <artifactId>xmvn-core</artifactId>
      <version>4.3.0</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.9.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymock</artifactId>
      <version>4.3</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>21</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <goals>
              <goal>run</goal>
            </goals>
            <phase>compile</phase>
            <configuration>
              <target>
                <property environment="env"/>
                <property name="env.JAVA_HOME" value="/usr/lib/jvm/java"/>
                <property name="env.CC" value="cc"/>
                <property name="env.CFLAGS" value="-g -Wall -Wextra"/>
                <property name="env.LDFLAGS" value=""/>
                <exec executable="${env.CC}">
                  <arg line="-std=c99 -shared -fPIC"/>
                  <arg value="-I${env.JAVA_HOME}/include"/>
                  <arg value="-I${env.JAVA_HOME}/include/linux"/>
                  <arg line="${env.CFLAGS}"/>
                  <arg line="-l rpmio"/>
                  <arg line="${env.LDFLAGS}"/>
                  <arg value="-o"/>
                  <arg value="${project.build.outputDirectory}/xmvn-generator-native.so"/>
                  <arg value="${project.basedir}/src/main/jni/xmvn-generator-native.c"/>
                </exec>
              </target>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M7</version>
      </plugin>
    </plugins>
  </build>
</project>
